source/arduino/astronomy.h


typedef enum
{
    ASTRO_SUCCESS,                  
    ASTRO_NOT_INITIALIZED,          
    ASTRO_INVALID_BODY,             
    ASTRO_NO_CONVERGE,              
    ASTRO_BAD_TIME,                 
    ASTRO_BAD_VECTOR,               
    ASTRO_SEARCH_FAILURE,           
    ASTRO_EARTH_NOT_ALLOWED,        
    ASTRO_NO_MOON_QUARTER,          
    ASTRO_WRONG_MOON_QUARTER,       
    ASTRO_INTERNAL_ERROR,           
    ASTRO_INVALID_PARAMETER,        
    ASTRO_FAIL_APSIS,               
    ASTRO_BUFFER_TOO_SMALL,         
    ASTRO_OUT_OF_MEMORY,            
    ASTRO_INCONSISTENT_TIMES        
}
astro_status_t;
typedef struct
{
    double ut;
    double tt;
    double psi;
    double eps;
    double st;
}
astro_time_t;
typedef struct
{
    astro_status_t status;  
    double x;               
    double y;               
    double z;               
    astro_time_t t;         
}
astro_vector_t;
typedef struct
{
    astro_status_t status;  
    double x;               
    double y;               
    double z;               
    double vx;              
    double vy;              
    double vz;              
    astro_time_t t;         
}
astro_state_vector_t;
typedef struct
{
    astro_status_t status;  
    double lat;             
    double lon;             
    double dist;            
}
astro_spherical_t;
typedef enum
{
    BODY_INVALID = -1,      
    BODY_MERCURY,           
    BODY_VENUS,             
    BODY_EARTH,             
    BODY_MARS,              
    BODY_JUPITER,           
    BODY_SATURN,            
    BODY_URANUS,            
    BODY_NEPTUNE,           
    BODY_PLUTO,             
    BODY_SUN,               
    BODY_MOON,              
    BODY_EMB,               
    BODY_SSB,               
    BODY_STAR1 = 101,       
    BODY_STAR2,             
    BODY_STAR3,             
    BODY_STAR4,             
    BODY_STAR5,             
    BODY_STAR6,             
    BODY_STAR7,             
    BODY_STAR8,             
}
astro_body_t;
typedef struct
{
    double latitude;        
    double longitude;       
    double height;          
}
astro_observer_t;
typedef struct
{
    astro_status_t status;  
    double ra;              
    double dec;             
    double dist;            
    astro_vector_t vec;     
}
astro_equatorial_t;
typedef struct
{
    astro_status_t status;  
    double rot[3][3];       
}
astro_rotation_t;
typedef enum
{
    REFRACTION_NONE,    
    REFRACTION_NORMAL,  
    REFRACTION_JPLHOR   
}
astro_refraction_t;
typedef struct
{
    astro_status_t status;  
    double pressure;        
    double temperature;     
    double density;         
}
astro_atmosphere_t;
typedef struct
{
    astro_status_t  status;     
    astro_time_t    time;       
}
astro_search_result_t;
typedef struct
{
    astro_status_t  status;         
    astro_time_t    mar_equinox;    
    astro_time_t    jun_solstice;   
    astro_time_t    sep_equinox;    
    astro_time_t    dec_solstice;   
}
astro_seasons_t;
typedef struct
{
    astro_status_t status;      
    double value;               
}
astro_func_result_t;
typedef astro_func_result_t (* astro_search_func_t) (void *context, astro_time_t time);
typedef struct
{
    astro_status_t      status;     
    astro_time_t        time;       
    astro_horizon_t     hor;        
}
astro_hour_angle_t;
typedef struct
{
    astro_status_t      status;         
    astro_time_t        time;           
    double              mag;            
    double              phase_angle;    
    double              phase_fraction; 
    double              helio_dist;     
    double              ring_tilt;      
}
astro_illum_t;
typedef struct
{
    astro_status_t      status;     
    astro_time_t        time;       
    astro_apsis_kind_t  kind;       
    double              dist_au;    
    double              dist_km;    
}
astro_apsis_t;
typedef struct
{
    astro_status_t          status;         
    astro_eclipse_kind_t    kind;           
    double                  obscuration;    
    astro_time_t            peak;           
    double                  sd_penum;       
    double                  sd_partial;     
    double                  sd_total;       
}
astro_lunar_eclipse_t;
typedef struct
{
    astro_status_t          status;         
    astro_eclipse_kind_t    kind;           
    double                  obscuration;    
    astro_time_t            peak;           
    double                  distance;       
    double                  latitude;       
    double                  longitude;      
}
astro_global_solar_eclipse_t;
typedef struct
{
    astro_status_t          status;         
    astro_eclipse_kind_t    kind;           
    double                  obscuration;    
    astro_eclipse_event_t   partial_begin;  
    astro_eclipse_event_t   total_begin;    
    astro_eclipse_event_t   peak;           
    astro_eclipse_event_t   total_end;      
    astro_eclipse_event_t   partial_end;    
}
astro_local_solar_eclipse_t;
typedef struct
{
    astro_status_t  status;         
    astro_time_t    start;          
    astro_time_t    peak;           
    astro_time_t    finish;         
    double          separation;     
}
astro_transit_t;
typedef enum
{
    DIRECTION_RISE = +1,    
    DIRECTION_SET  = -1,    
}
astro_direction_t;
typedef struct
{
    astro_status_t status;      
    const char    *symbol;      
    const char    *name;        
    double         ra_1875;     
    double         dec_1875;    
}
astro_constellation_t;
typedef struct
{
    astro_status_t  status;     
    double          ra;         
    double          dec;        
    double          spin;       
    astro_vector_t  north;      
}
astro_axis_t;
typedef struct
{
    astro_status_t      status;     
    astro_time_t        time;       
    astro_node_kind_t   kind;       
}
astro_node_event_t;
typedef struct astro_grav_sim_s astro_grav_sim_t;
astro_lunar_eclipse_t Astronomy_NextLunarEclipse(astro_time_t prevEclipseTime);
astro_global_solar_eclipse_t Astronomy_SearchGlobalSolarEclipse(astro_time_t startTime);
astro_global_solar_eclipse_t Astronomy_NextGlobalSolarEclipse(astro_time_t prevEclipseTime);
astro_local_solar_eclipse_t Astronomy_SearchLocalSolarEclipse(astro_time_t startTime, astro_observer_t observer);
astro_local_solar_eclipse_t Astronomy_NextLocalSolarEclipse(astro_time_t prevEclipseTime, astro_observer_t observer);
astro_transit_t Astronomy_SearchTransit(astro_body_t body, astro_time_t startTime);
astro_transit_t Astronomy_NextTransit(astro_body_t body, astro_time_t prevTransitTime);
astro_node_event_t Astronomy_SearchMoonNode(astro_time_t startTime);
astro_node_event_t Astronomy_NextMoonNode(astro_node_event_t prevNode);
astro_search_result_t Astronomy_Search(
    astro_search_func_t func,
    void *context,
    astro_time_t t1,
    astro_time_t t2,
    double dt_tolerance_seconds);
astro_search_result_t Astronomy_SearchSunLongitude(
    double targetLon,
    astro_time_t startTime,
    double limitDays);
astro_hour_angle_t Astronomy_SearchHourAngleEx(
    astro_body_t body,
    astro_observer_t observer,
    double hourAngle,
    astro_time_t startTime,
    int direction);
astro_func_result_t Astronomy_HourAngle(
    astro_body_t body,
    astro_time_t *time,
    astro_observer_t observer);
astro_search_result_t Astronomy_SearchRiseSetEx(
    astro_body_t body,
    astro_observer_t observer,
    astro_direction_t direction,
    astro_time_t startTime,
    double limitDays,
    double metersAboveGround);
astro_search_result_t Astronomy_SearchAltitude(
    astro_body_t body,
    astro_observer_t observer,
    astro_direction_t direction,
    astro_time_t startTime,
    double limitDays,
    double altitude);
astro_atmosphere_t Astronomy_Atmosphere(double elevationMeters);
astro_axis_t Astronomy_RotationAxis(astro_body_t body, astro_time_t *time);
astro_seasons_t Astronomy_Seasons(int year);
astro_illum_t Astronomy_Illumination(astro_body_t body, astro_time_t time);
astro_illum_t Astronomy_SearchPeakMagnitude(astro_body_t body, astro_time_t startTime);
astro_apsis_t Astronomy_SearchLunarApsis(astro_time_t startTime);
astro_apsis_t Astronomy_NextLunarApsis(astro_apsis_t apsis);
astro_apsis_t Astronomy_SearchPlanetApsis(astro_body_t body, astro_time_t startTime);
astro_apsis_t Astronomy_NextPlanetApsis(astro_body_t body, astro_apsis_t apsis);
astro_rotation_t Astronomy_IdentityMatrix(void);
astro_rotation_t Astronomy_InverseRotation(astro_rotation_t rotation);
astro_rotation_t Astronomy_CombineRotation(astro_rotation_t a, astro_rotation_t b);
astro_rotation_t Astronomy_Pivot(astro_rotation_t rotation, int axis, double angle);
astro_vector_t Astronomy_VectorFromSphere(astro_spherical_t sphere, astro_time_t time);
astro_spherical_t Astronomy_SphereFromVector(astro_vector_t vector);
astro_equatorial_t Astronomy_EquatorFromVector(astro_vector_t vector);
astro_vector_t Astronomy_VectorFromHorizon(astro_spherical_t sphere, astro_time_t time, astro_refraction_t refraction);
astro_spherical_t Astronomy_HorizonFromVector(astro_vector_t vector, astro_refraction_t refraction);
astro_vector_t Astronomy_RotateVector(astro_rotation_t rotation, astro_vector_t vector);
astro_state_vector_t Astronomy_RotateState(astro_rotation_t rotation, astro_state_vector_t state);
astro_rotation_t Astronomy_Rotation_EQD_EQJ(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_EQD_ECL(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_EQD_ECT(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_EQD_HOR(astro_time_t *time, astro_observer_t observer);
astro_rotation_t Astronomy_Rotation_EQJ_EQD(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_EQJ_ECT(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_EQJ_ECL(void);
astro_rotation_t Astronomy_Rotation_EQJ_HOR(astro_time_t *time, astro_observer_t observer);
astro_rotation_t Astronomy_Rotation_ECL_EQD(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_ECL_EQJ(void);
astro_rotation_t Astronomy_Rotation_ECL_HOR(astro_time_t *time, astro_observer_t observer);
astro_rotation_t Astronomy_Rotation_ECT_EQJ(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_ECT_EQD(astro_time_t *time);
astro_rotation_t Astronomy_Rotation_HOR_EQD(astro_time_t *time, astro_observer_t observer);
astro_rotation_t Astronomy_Rotation_HOR_EQJ(astro_time_t *time, astro_observer_t observer);
astro_rotation_t Astronomy_Rotation_HOR_ECL(astro_time_t *time, astro_observer_t observer);
astro_rotation_t Astronomy_Rotation_EQJ_GAL(void);
astro_rotation_t Astronomy_Rotation_GAL_EQJ(void);
double Astronomy_Refraction(astro_refraction_t refraction, double altitude);
double Astronomy_InverseRefraction(astro_refraction_t refraction, double bent_altitude);
astro_constellation_t Astronomy_Constellation(double ra, double dec);
astro_status_t Astronomy_GravSimInit(
    astro_grav_sim_t **simOut,
    astro_body_t originBody,
    astro_time_t time,
    int numBodies,
    const astro_state_vector_t *bodyStateArray
);