source/pascal/Astronomy.pas


  // Searches for the next lunar eclipse in a series.
  function Astronomy_NextLunarEclipse(PrevEclipseTime: AstroTime): AstroLunarEclipse; cdecl; external LibraryName;

  // Searches for a solar eclipse visible anywhere on the Earth's surface.
  function Astronomy_SearchGlobalSolarEclipse(StartTime: AstroTime): AstroGlobalSolarEclipse; cdecl; external LibraryName;

  // Searches for the next global solar eclipse in a series.
  function Astronomy_NextGlobalSolarEclipse(PrevEclipseTime: AstroTime): AstroGlobalSolarEclipse; cdecl; external LibraryName;

  // Searches for a solar eclipse visible at specific location on the Earth's surface.
  function Astronomy_SearchLocalSolarEclipse(StartTime: AstroTime; Observer: AstroObserver): AstroLocalSolarEclipse; cdecl; external LibraryName;

  // Searches for the next local solar eclipse in a series.
  function Astronomy_NextLocalSolarEclipse(PrevEclipseTime: AstroTime; Observer: AstroObserver): AstroLocalSolarEclipse; cdecl; external LibraryName;

  // Searches for the first transit of Mercury or Venus after a given date.
  function Astronomy_SearchTransit(Body: AstroBody; StartTime: AstroTime): AstroTransit; cdecl; external LibraryName;

  // Searches for another transit of Mercury or Venus.
  function Astronomy_NextTransit(Body: AstroBody; PrevTransitTime: AstroTime): AstroTransit; cdecl; external LibraryName;

  // Searches for a time when the Moon's center crosses through the ecliptic plane.
  function Astronomy_SearchMoonNode(StartTime: AstroTime): AstroNodeEvent; cdecl; external LibraryName;

  // Searches for the next time when the Moon's center crosses through the ecliptic plane.
  function Astronomy_NextMoonNode(PrevNode: AstroNodeEvent): AstroNodeEvent; cdecl; external LibraryName;

  // Searches for a time at which a function's value increases through zero.
  function Astronomy_Search(Func: PAstroSearchFunc; Context: Pointer; T1: AstroTime; T2: AstroTime; DTToleranceSeconds: Double): AstroSearchResult; cdecl; external LibraryName;

  // Searches for the time when the Sun reaches an apparent ecliptic longitude as seen from the Earth.
  function Astronomy_SearchSunLongitude(TargetLon: Double; StartTime: AstroTime; LimitDays: Double): AstroSearchResult; cdecl; external LibraryName;

  // Searches for the time when the center of a body reaches a specified hour angle as seen by an observer on the Earth.
  function Astronomy_SearchHourAngleEx(Body: AstroBody; Observer: AstroObserver; HourAngle: Double; StartTime: AstroTime; Direction: Int32): AstroHourAngle; cdecl; external LibraryName;

  // Finds the hour angle of a body for a given observer and time.
  function Astronomy_HourAngle(Body: AstroBody; Time: PAstroTime; Observer: AstroObserver): AstroFuncResult; cdecl; external LibraryName;

  // Searches for the next time a celestial body rises or sets as seen by an observer on the Earth.
  function Astronomy_SearchRiseSetEx(Body: AstroBody; Observer: AstroObserver; Direction: AstroDirection; StartTime: AstroTime; LimitDays: Double; MetersAboveGround: Double): AstroSearchResult; cdecl; external LibraryName;

  // Finds the next time the center of a body passes through a given altitude.
  function Astronomy_SearchAltitude(Body: AstroBody; Observer: AstroObserver; Direction: AstroDirection; StartTime: AstroTime; LimitDays: Double; Altitude: Double): AstroSearchResult; cdecl; external LibraryName;

  // Calculates U.S. Standard Atmosphere (1976) variables as a function of elevation.
  function Astronomy_Atmosphere(ElevationMeters: Double): AstroAtmosphere; cdecl; external LibraryName;

  // Calculates information about a body's rotation axis at a given time.
  function Astronomy_RotationAxis(Body: AstroBody; Time: PAstroTime): AstroAxis; cdecl; external LibraryName;

  // Finds both equinoxes and both solstices for a given calendar year.
  function Astronomy_Seasons(Year: Int32): AstroSeasons; cdecl; external LibraryName;

  // Finds visual magnitude, phase angle, and other illumination information about a celestial body.
  function Astronomy_Illumination(Body: AstroBody; Time: AstroTime): AstroIllum; cdecl; external LibraryName;

  // Searches for the date and time Venus will next appear brightest as seen from the Earth.
  function Astronomy_SearchPeakMagnitude(Body: AstroBody; StartTime: AstroTime): AstroIllum; cdecl; external LibraryName;

  // Finds the date and time of the Moon's closest distance (perigee) or farthest distance (apogee) with the respect to the Earth.
  function Astronomy_SearchLunarApsis(StartTime: AstroTime): AstroApsis; cdecl; external LibraryName;

  // Finds the next lunar perigee or apogee event in a series.
  function Astronomy_NextLunarApsis(Apsis: AstroApsis): AstroApsis; cdecl; external LibraryName;

  // Finds the date and time of a planet's perihelion (closest approach to the Sun) or aphelion (farthest distance from the Sun) after a given time.
  function Astronomy_SearchPlanetApsis(Body: AstroBody; StartTime: AstroTime): AstroApsis; cdecl; external LibraryName;

  // Finds the next planetary perihelion or aphelion event in a series.
  function Astronomy_NextPlanetApsis(Body: AstroBody; Apsis: AstroApsis): AstroApsis; cdecl; external LibraryName;

  // Creates an identity rotation matrix.
  function Astronomy_IdentityMatrix(): AstroRotation; cdecl; external LibraryName;

  // Calculatues the inverse of a rotation matrix.
  function Astronomy_InverseRotation(Rotation: AstroRotation): AstroRotation; cdecl; external LibraryName;

  // Creates a rotation based on applying one rotation followed by another.
  function Astronomy_CombineRotation(A: AstroRotation; B: AstroRotation): AstroRotation; cdecl; external LibraryName;

  // Re-orients a rotation matrix by pivoting it by an angle around one of its axes.
  function Astronomy_Pivot(Rotation: AstroRotation; Axis: Int32; Angle: Double): AstroRotation; cdecl; external LibraryName;

  // Converts spherical coordinates to Cartesian coordinates.
  function Astronomy_VectorFromSphere(Sphere: AstroSpherical; Time: AstroTime): AstroVector; cdecl; external LibraryName;

  // Converts Cartesian coordinates to spherical coordinates.
  function Astronomy_SphereFromVector(Vector: AstroVector): AstroSpherical; cdecl; external LibraryName;

  // Given an equatorial vector, calculates equatorial angular coordinates.
  function Astronomy_EquatorFromVector(Vector: AstroVector): AstroEquatorial; cdecl; external LibraryName;

  // Given apparent angular horizontal coordinates in `sphere`, calculates horizontal vector.
  function Astronomy_VectorFromHorizon(Sphere: AstroSpherical; Time: AstroTime; Refraction: AstroRefraction): AstroVector; cdecl; external LibraryName;

  // Converts Cartesian coordinates to horizontal coordinates.
  function Astronomy_HorizonFromVector(Vector: AstroVector; Refraction: AstroRefraction): AstroSpherical; cdecl; external LibraryName;

  // Applies a rotation to a vector, yielding a rotated vector.
  function Astronomy_RotateVector(Rotation: AstroRotation; Vector: AstroVector): AstroVector; cdecl; external LibraryName;

  // Applies a rotation to a state vector, yielding a rotated vector.
  function Astronomy_RotateState(Rotation: AstroRotation; State: AstroStateVector): AstroStateVector; cdecl; external LibraryName;

  // Calculates a rotation matrix from equatorial of-date (EQD) to J2000 mean equator (EQJ).
  function Astronomy_Rotation_EQD_EQJ(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from equatorial of-date (EQD) to J2000 mean ecliptic (ECL).
  function Astronomy_Rotation_EQD_ECL(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Returns a rotation matrix from equator of date (EQD) to true ecliptic of date (ECT).
  function Astronomy_Rotation_EQD_ECT(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from equatorial of-date (EQD) to horizontal (HOR).
  function Astronomy_Rotation_EQD_HOR(Time: PAstroTime; Observer: AstroObserver): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from J2000 mean equator (EQJ) to equatorial of-date (EQD).
  function Astronomy_Rotation_EQJ_EQD(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from J2000 mean equator (EQJ) to true ecliptic of date (ECT).
  function Astronomy_Rotation_EQJ_ECT(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from J2000 mean equator (EQJ) to J2000 mean ecliptic (ECL).
  function Astronomy_Rotation_EQJ_ECL(): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from J2000 mean equator (EQJ) to horizontal (HOR).
  function Astronomy_Rotation_EQJ_HOR(Time: PAstroTime; Observer: AstroObserver): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from J2000 mean ecliptic (ECL) to equatorial of-date (EQD).
  function Astronomy_Rotation_ECL_EQD(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from J2000 mean ecliptic (ECL) to J2000 mean equator (EQJ).
  function Astronomy_Rotation_ECL_EQJ(): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from J2000 mean ecliptic (ECL) to horizontal (HOR).
  function Astronomy_Rotation_ECL_HOR(Time: PAstroTime; Observer: AstroObserver): AstroRotation; cdecl; external LibraryName;

  // Calculates a rotation matrix from true ecliptic of date (ECT) to J2000 mean equator (EQJ).
  function Astronomy_Rotation_ECT_EQJ(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Calulcates a rotation matrix from true ecliptic of date (ECT) to equator of date (EQD).
  function Astronomy_Rotation_ECT_EQD(Time: PAstroTime): AstroRotation; cdecl; external LibraryName;

  // Calulcates a rotation matrix from horizontal (HOR) to equatorial of-date (EQD).
  function Astronomy_Rotation_HOR_EQD(Time: PAstroTime; Observer: AstroObserver): AstroRotation; cdecl; external LibraryName;

  // Calulcates a rotation matrix from horizontal (HOR) to J2000 equatorial (EQJ).
  function Astronomy_Rotation_HOR_EQJ(Time: PAstroTime; Observer: AstroObserver): AstroRotation; cdecl; external LibraryName;

  // Calulcates a rotation matrix from horizontal (HOR) to J2000 mean ecliptic (ECL).
  function Astronomy_Rotation_HOR_ECL(Time: PAstroTime; Observer: AstroObserver): AstroRotation; cdecl; external LibraryName;

  // Calulcates a rotation matrix from J2000 mean ecliptic (EQJ) to galactic (GAL).
  function Astronomy_Rotation_EQJ_GAL(): AstroRotation; cdecl; external LibraryName;

  // Calulcates a rotation matrix from galactic (GAL) to J2000 mean ecliptic (EQJ).
  function Astronomy_Rotation_GAL_EQJ(): AstroRotation; cdecl; external LibraryName;

  // Calculates the amount of "lift" to an altitude angle caused by atmospheric refraction.
  function Astronomy_Refraction(Refraction: AstroRefraction; Altitude: Double): Double; cdecl; external LibraryName;

  // Calculates the inverse of an atmospheric refraction angle.
  function Astronomy_InverseRefraction(Refraction: AstroRefraction; BentAltitude: Double): Double; cdecl; external LibraryName;

  // Determines the constellation that contains the given point in the sky.
  function Astronomy_Constellation(RA: Double; Dec: Double): AstroConstellation; cdecl; external LibraryName;

{ Allocate and initialize a gravity step simulator.
  Prepares to simulate a series of incremental time steps,
  simulating the movement of zero or more small bodies through the Solar System
  acting under gravitational attraction from the Sun and planets. }
  function Astronomy_GravSimInit(SimOut: PAstroGravSim; OriginBody: AstroBody; Time: AstroTime; NumBodies: Int32; BodyStateArray: PAstroStateVector): AstroStatus; cdecl; external LibraryName;
